# fg

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Readme.md  TODO.md  build.bat  build.sh  submodules.sh  test.cc
assets/shaders/: fragment.glsl  simple_v.glsl  vertex.glsl
glad/include/glad/: wgl.h
gltest/: build.bat  build.sh  mac_main.cc  render.cc  render.h  test.cc  windows_main.cc
gltest/assets/shaders/: f_light.glsl  fragment.glsl  vertex.glsl
gltest/chap2/: render.cc  render.h
gltest/chap2/assets/shaders/: fragment.glsl
gltest/chap3/: render.cc  render.h
gltest/chap3/assets/shaders/: frag.glsl  frag_no_diffuse.glsl  vertex.glsl
gltest/chap3/assets/texture/: frag.glsl  vertex.glsl
gltest/include/glad/: gl.h
gltest/shaders/: vertex.glsl
include/: fg.h  fg_macros.h
include/event/: event.cc  event.h
include/fg_gl/: gl.h
include/fg_interact/: event.h  state.h
include/fg_model/: model.h
include/fg_scene/: scene.h
include/fg_utils/: log.h  macros.h  time.h  utils.h
include/fg_window/: window.h
include/window/: window.cpp  window.h
include/window/sys/: window.cpp  window.h
src/: debug.h
src/event/: event.cc  event.h  queue.h
src/fg_event/: event.cc  event.h
src/fg_gl/: gl.cc  gl.h
src/fg_interact/: event.cc  event.h  state.h
src/fg_model/: model.cc
src/fg_scene/: scene.cc
src/fg_utils/: log.cc  time.cc  time.h  utils.h  windows_console.cc  windows_console.h
src/fg_window/: window.cc  window.h  window_proc.cc  window_proc.h
src/sys/windows/: window.h  window_proc.cpp
src/window/: window.cc  window.h
